--- a/lab 2 - grid/thefuture/style.css
+++ b/lab 2 - grid/thefuture/style.css
@@ -8,7 +8,7 @@ text-align: center;
 text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
-margin: 10px;
+margin: 5px;
 }
 
 .broken{
@@ -17,7 +17,7 @@ text-align: center;
 text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
-margin: 10px;
+margin: 5px;
 
 }
 
@@ -27,5 +27,40 @@ text-align: center;
 text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
-margin: 10px;
+margin: 5px;
+}
+
+@media (min-width: 60em){
+    
+    body{
+        display: grid;
+        grid-template-columns: 6fr 6fr;
+    }
+
+}
+
+@media (min-width: 60em){
+    
+    body{
+        display: grid;
+        grid-template-columns: 6fr 6fr;
+    }
+
+}
+
+@media (min-width: 80em){
+    
+    body{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+    }
+
+    .homework{
+        grid-row: 1/ span 3;
+        grid-column-start: 3; 
+    }
+
+
+
 }
