--- a/lab 2 - grid/thefuture/style.css
+++ b/lab 2 - grid/thefuture/style.css
@@ -1,19 +1,21 @@
 *{
     box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+    text-align: center;
 }
 
-.homework{
+.homework, .homework2{
 background-color: red;
-text-align: center;
 text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
 margin: 5px;
+
 }
 
 .broken{
 background-color: lightskyblue;
-text-align: center;
 text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
@@ -23,20 +25,10 @@ margin: 5px;
 
 .cloud{
 background-color: yellow;
-text-align: center;
 text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
 margin: 5px;
-}
-
-@media (min-width: 60em){
-    
-    body{
-        display: grid;
-        grid-template-columns: 6fr 6fr;
-    }
-
 }
 
 @media (min-width: 60em){
@@ -50,16 +42,27 @@ margin: 5px;
 
 @media (min-width: 80em){
     
-    body{
+    body > div{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(5, 1fr);
+        
+       
     }
 
-    .homework{
-        grid-row: 1/ span 3;
-        grid-column-start: 3; 
+    .broken{
+        display: grid;
+        grid-row: 1/3;
+        grid-column: 5;
     }
+
+    .cloud {
+        display: grid;
+        grid-row: 2/3;
+        grid-column: 4/5;
+    }
+ 
+
 
 
 
