--- a/lab 2 - grid/thefuture/style.css
+++ b/lab 2 - grid/thefuture/style.css
@@ -5,13 +5,17 @@
     text-align: center;
 }
 
-.homework, .homework2{
+.homework{
 background-color: red;
 text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
 margin: 5px;
 
+}
+
+h1{
+    align-self: center;
 }
 
 .broken{
@@ -29,6 +33,7 @@ text-transform: uppercase;
 font-weight: bold;
 padding: 5px;
 margin: 5px;
+display: grid;
 }
 
 @media (min-width: 60em){
@@ -42,27 +47,32 @@ margin: 5px;
 
 @media (min-width: 80em){
     
-    body > div{
+    div{
         display: grid;
         grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(5, 1fr);
-        
+        grid-template-columns: repeat(5, auto);
+        align-items: center;
+        grid-auto-flow: column;
+        grid-column-gap: 20px;
        
     }
-
+        
     .broken{
         display: grid;
-        grid-row: 1/3;
-        grid-column: 5;
+        grid-row: 1/4;
+        grid-column: 3/4;
     }
 
     .cloud {
         display: grid;
-        grid-row: 2/3;
-        grid-column: 4/5;
+        grid-row: 2/4;
+        grid-column: 4/6;
     }
  
-
+    div p {
+        align-content: center;
+        text-align: center;
+    }
 
 
 
