--- a/lab 2 - grid/thefuture/style.css
+++ b/lab 2 - grid/thefuture/style.css
@@ -6,7 +6,6 @@
 
 h1{
     text-align: center;
-    vertical-align: center;
 }
 
 .homework{
@@ -49,7 +48,6 @@ margin: 6px;
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         grid-template-columns: repeat(5, auto);
-        grid-column-gap: 20px;
        
     }
         
@@ -57,6 +55,7 @@ margin: 6px;
         display: grid;
         grid-row: 1/4;
         grid-column: 3/4;
+        align-content: center;
     }
 
     .cloud {
