--- a/lab 2 - grid/gridticket/style.css
+++ b/lab 2 - grid/gridticket/style.css
@@ -1,6 +1,101 @@
 *{
     box-sizing: border-box;
+    margin:0;
+    padding:0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 12px;
+}
+
+
+header {
+background-color: black;
+color: white;
+padding: 50px;
+letter-spacing: 2px;
+}
+
+h1{
+    text-align: center;
+    font-size: 40px;
+    letter-spacing: 10px;
+}
+
+h3{
+    text-align: center;
+    font-weight: lighter;
+    margin-top: 15px;
+    font-size: 15px;
+    letter-spacing: 6px;
+}
+
+section{
+    background-image: url(festival.jpg);
+    background-position: center top;
+    background-size: cover;
+    position:relative;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    background-blend-mode: overlay;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.tabel{
+    margin-top: 100px;
+    padding-top: 20%;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-items: center;
+    margin-bottom: -135px;
+}
+
+.box1{
+   grid-column: 1/2;
+   width: 100%;
+   height: 100%;
+   text-align: center; 
+   padding: 20px;
+}
+
+.box2{
+    grid-column: 2/3;
+    width: 100%;
+    height: 100%;
+    text-align: center; 
+    padding: 20px;
+ }
+
+.box3{
+    grid-column: 1/3;
+    width: 100%;
+    height: 100%;
+    text-align: center; 
+    padding: 20px;
+}
+
+.borders{
+    border: 2px solid #000; 
+
+}
+
+.hide{
+    visibility: hidden;
+}
+
+.qr{
+    width: 30em;
+    vertical-align: middle;
+}
+
+h2{
+    font-size: 20px;
+    font-weight: 50%;
+}
+
+@media(min width: 900px){
+   
+    header{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
