--- a/lab 2 - grid/gridticket/style.css
+++ b/lab 2 - grid/gridticket/style.css
@@ -2,16 +2,27 @@
     box-sizing: border-box;
     margin:0;
     padding:0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 12px;
+    font-family: Verdana;
 }
 
+body{
+    background-image: url(festival.jpg);
+    background-position: center top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-blend-mode: overlay;
+    background-color: rgba(255, 255, 255, 0.5);
+}
 
-header {
+section{
+    display: grid;
+    grid-template-columns: ;
+}
+
+.banner {
 background-color: black;
 color: white;
-padding: 50px;
-letter-spacing: 2px;
+padding: 8%;
 }
 
 h1{
@@ -29,27 +40,18 @@ h3{
 }
 
 section{
-    background-image: url(festival.jpg);
-    background-position: center top;
-    background-size: cover;
-    position:relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
-    background-blend-mode: overlay;
-    background-color: rgba(255, 255, 255, 0.5);
+    height: 100vh;
 }
 
 .tabel{
-    margin-top: 100px;
+    margin-top: 80px;
     padding-top: 20%;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     justify-items: center;
-    margin-bottom: -135px;
 }
 
 .box1{
-   grid-column: 1/2;
    width: 100%;
    height: 100%;
    text-align: center; 
@@ -57,7 +59,6 @@ section{
 }
 
 .box2{
-    grid-column: 2/3;
     width: 100%;
     height: 100%;
     text-align: center; 
@@ -74,7 +75,6 @@ section{
 
 .borders{
     border: 2px solid #000; 
-
 }
 
 .hide{
@@ -82,8 +82,8 @@ section{
 }
 
 .qr{
-    width: 30em;
-    vertical-align: middle;
+    width: 20em;
+    padding-top: 100px;
 }
 
 h2{
@@ -91,11 +91,49 @@ h2{
     font-weight: 50%;
 }
 
-@media(min width: 900px){
-   
-    header{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
+@media(min-width: 1000px){
+   section{
+       display: grid;
+       grid-template-columns: 60% 40%;
+       grid-template-rows: 60% 25% 15%;
+       height: 0px;
+   } 
+
+   .banner{
+       background-color: transparent;
+       color: black;
+       border: 1px solid black;
+   }
+
+   .tabel{
+       display: grid;
+       grid-template-columns: 1fr 1fr 1fr;
+   }
+
+   h1{
+       font-size: 100px;
+   }
+
+.box3{
+    grid-column: 3/4;
+}
+
+.hide{
+    visibility: visible;
+    border: 1px solid black;
+    height: 100%;
+    width: 100%;
+    grid-column: 1/4;
+    padding: 20px;
+    text-align: center;
+} 
+
+body{
+    background-position: 0 60%;
+    background-size: cover;
+}
+
+
+     
 }
 
