--- a/lab4-ad/app.css
+++ b/lab4-ad/app.css
@@ -1,8 +1,12 @@
 .container{
+    padding: 5px;
    background-color: lightgoldenrodyellow;
    margin-top: 30px;
-   width: 500px;
+   width: 300px;
    height: 600px;
+   background-repeat: none;
+   background-position: center;
+   margin-left: 5px ;
 }
 
 .image{
@@ -24,6 +28,8 @@ body {
 
 h1{
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
 
