--- a/lab4-ad/app.css
+++ b/lab4-ad/app.css
@@ -1,37 +1,31 @@
 .container{
     padding: 5px;
-   background-color: lightgoldenrodyellow;
    margin-top: 30px;
    width: 300px;
    height: 600px;
-   background-repeat: none;
-   background-position: center;
    margin-left: 5px ;
-}
-
-.image{
-    width: 100%;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
-.imageInside{
-    display: none;
-}
-
-.imageOutside{
-    display: none;
 }
 
 h1{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 25px;
+    background-color: rgba(0, 0, 139, 0.500);
+    padding: 30px;
 }
 
+
+h2{
+    padding-top: 30px;
+    padding-left: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    color:white;
+}
+
+.activity{
+    margin-top: 200px;
+    background-color: rgba(238, 130, 238, 0.726);
+}
 
 
 
