--- a/lab4-ad/app.css
+++ b/lab4-ad/app.css
@@ -7,6 +7,13 @@
 }
 
 h1{
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    padding-bottom: 30px;
+}
+
+h2{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
@@ -15,7 +22,7 @@ h1{
 }
 
 
-h2{
+h3{
     padding-top: 30px;
     padding-left: 5px;
     font-family: Arial, Helvetica, sans-serif;
@@ -23,7 +30,7 @@ h2{
 }
 
 .activity{
-    margin-top: 200px;
+    margin-top: 20px;
     background-color: rgba(238, 130, 238, 0.726);
 }
 
