--- a/lab4-ad/app.css
+++ b/lab4-ad/app.css
@@ -1,38 +1,55 @@
 .container{
     padding: 5px;
    margin-top: 30px;
-   width: 300px;
-   height: 600px;
+   width: 350px;
+   height: 700px;
    margin-left: 5px ;
+}
+
+.barimage{
+    padding-left: 100px;
 }
 
 h1{
     color:white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    padding-bottom: 30px;
+    font-size: 20px;
+    padding-bottom: 10px;
 }
 
 h2{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-size: 21px;
     background-color: rgba(0, 0, 139, 0.500);
-    padding: 30px;
+    padding: 10px;
 }
 
 
 h3{
-    padding-top: 30px;
+    padding-top: 5px;
     padding-left: 5px;
     font-family: Arial, Helvetica, sans-serif;
     color:white;
 }
 
-.activity{
-    margin-top: 20px;
+.cocktail{
     background-color: rgba(238, 130, 238, 0.726);
 }
 
+h4{
+    padding-top: 5px;
+    padding-left: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    color:white;  
+}
+
+#ingredient1 #ingredient2 #ingredient3 #ingredient4{
+    color: white;
+}
+
+#picture img{
+    width: 40%;
+}
 
 
