--- a/lab4-ad/app.css
+++ b/lab4-ad/app.css
@@ -1,13 +1,12 @@
 .container{
-    padding: 5px;
    margin-top: 30px;
-   width: 350px;
-   height: 700px;
+   width: 300px;
+   height: 600px;
    margin-left: 5px ;
 }
 
 .barimage{
-    padding-left: 100px;
+    padding-left: 70px;
 }
 
 h1{
@@ -21,7 +20,7 @@ h2{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 21px;
-    background-color: rgba(0, 0, 139, 0.500);
+    background-color:green;
     padding: 10px;
 }
 
@@ -31,10 +30,6 @@ h3{
     padding-left: 5px;
     font-family: Arial, Helvetica, sans-serif;
     color:white;
-}
-
-.cocktail{
-    background-color: rgba(238, 130, 238, 0.726);
 }
 
 h4{
@@ -50,6 +45,11 @@ h4{
 
 #picture img{
     width: 40%;
+}
+
+.banner{
+    background-color:#FFEEC8;
+    height: 95.5px;
 }
 
 
